fixed game install paths

--- a/garrysmod/cfg/mount.cfg
+++ b/garrysmod/cfg/mount.cfg
@@ -6,11 +6,11 @@
 
 "mountcfg"
 {
-	"hl2"	"D:\Steam\steamapps\common\Half-Life 2\hl2"
-	"cstrike"	"D:\Steam\steamapps\common\Counter-Strike Source\cstrike"
-	"episodic"	"D:\Steam\steamapps\common\Half-Life 2\episodic"
-	"ep2"	"D:\Steam\steamapps\common\Half-Life 2\ep2"
-	"csgo"	"D:\Steam\steamapps\common\Counter-Strike Global Offensive\csgo"
+	"hl2"	"D:\SteamLibrary\steamapps\common\Half-Life 2\hl2"
+	"cstrike"	"D:\SteamLibrary\steamapps\common\Counter-Strike Source\cstrike"
+	"episodic"	"D:\SteamLibrary\steamapps\common\Half-Life 2\episodic"
+	"ep2"	"D:\SteamLibrary\steamapps\common\Half-Life 2\ep2"
+	"csgo"	"D:\SteamLibrary\steamapps\common\Counter-Strike Global Offensive\csgo"
 }
 
 
