updated start.bat and changed some network values

--- a/garrysmod/cfg/server.cfg
+++ b/garrysmod/cfg/server.cfg
@@ -1,8 +1,10 @@
 hostname "JASORN'S SHACK"
+sv_password hi
 fps_max 550
+sv_tickrate 66
 sv_stats 0
 sv_cheats 1
-sv_minrate 66000 
+sv_minrate 1048576
 sv_maxrate 0 
 sv_minupdaterate 66 
 sv_maxupdaterate 66 
